[package]
name = "android-sparse-image"
version = "0.1.3"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Low-level Android sparse image parsing headers"
readme = "README.md"
repository = "https://github.com/boardswarm/fastboot-rs"


[dependencies]
bytes = "1.11.0"
log = "0.4.22"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.3"

[dev-dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
