[package]
name = "fastboot-protocol"
version = "0.3.2"
edition = "2021"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
license = "MIT OR Apache-2.0"
description = "Fastboot protocol implementation"
readme = "README.md"
repository = "https://github.com/boardswarm/fastboot-rs"


[dependencies]
bytes = "1.11.0"
futures = "0.3.31"
nusb = { version = "0.2.3", features = ["tokio"] }
thiserror = "2.0.3"
tracing = "0.1.40"

[dev-dependencies]
android-sparse-image = { path = "../android-sparse-image", version = "0.1.3" }
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"] }
tracing-subscriber = "0.3.18"
